# discord-bot-curaga

./: .env.example  .flake8  .gitignore  .silentshell.toml  Dockerfile  LICENSE  Makefile  README.md  mise.toml  pyproject.toml  pytest.ini  requirements.lock.txt
.github/actions/python-setup/: action.yml
.github/workflows/: ci-check-status.yml  ci-check.yml  deploy.yml
config/: silentshell.Dockerfile
doc/plans/: retention_period.md  server_rules.md
scripts/: setup_agent.sh
src/discord_bot_curaga/: __init__.py  bot.py  config.py  context.py
src/discord_bot_curaga/_tests/: test_config.py
src/discord_bot_curaga/cogs/: __init__.py  heartbeat.py  message_retention_policy.py  onboarding.py  ping.py  redaction.py  server_rules.py
src/discord_bot_curaga/cogs/_tests/: test_message_retention_policy.py  test_onboarding_rules.py  test_redaction.py  test_server_rules.py
src/discord_bot_curaga/test_helpers/: __init__.py  matchers.py
src/discord_bot_curaga/utils/: async_cache.py  discord_client.py  discord_logging.py  discord_types.py  iter.py  parse_args.py  time.py
src/discord_bot_curaga/views/: approval_request.py  retention_confirmation.py  rules_acknowledgement.py
