[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-bot-curaga"
version = "0.0.1"
description = "A simple Discord bot for some random magic."
readme = "README.md"
authors = [
  { name = "Paul Slaughter", email = "paul@souldzin.com" }
]
dependencies = [
  "discord.py==2.7.1",
  "python-dotenv==1.2.2"
]

[project.optional-dependencies]
dev = [
  "black==26.3.1",
  "flake8==7.2.0",
  "pyright==1.1.408",
  "pytest==9.0.3",
  "pytest-mock==3.15.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
ignore = ["E501"]
